# tiny_smart_pointer

./: CMakeLists.txt  LICENSE  README.md
include/: ControlBlock.hpp  RCObject.hpp  SharedPointer.hpp  UniquePointer.hpp
src/: SharedPointer.cpp
unitest/: unitest.cpp
