CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(TinySmartPointerUnitest CXX)

SET(CMAKE_CXX_COMPILER clang++)

SET(CMAKE_BUILD_TYPE Release)


SET(SOURCES
  unitest/unitest.cpp
)

INCLUDE_DIRECTORIES(
  include
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest)
